--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules/
 /dist/
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -8,10 +9,10 @@ yarn-error.log*
 /test/e2e/reports/
 selenium-debug.log
 
-# Editor directories and files
+# Editor directories and figles
 .idea
 .vscode
 *.suo
 *.ntvs*
-*.njsproj
+*.njsproj8
 *.sln
